@@ -22,7 +22,7 @@ following parts:
 </center>
 
   <ul>
-    <li> <b>Directory '/home/neumann/xotcl-1.3.1/library/lib': </b><br><a HREF="./changeXOTclVersion-xotcl.html">changeXOTclVersion.xotcl</a>, <a HREF="./htmllib-xotcl.html">htmllib.xotcl</a>, <a HREF="./makeDoc-xotcl.html">makeDoc.xotcl</a>, <a HREF="./make-xotcl.html">make.xotcl</a>, <a HREF="./metadataAnalyzer-xotcl.html">metadataAnalyzer.xotcl</a>, <a HREF="./mixinStrategy-xotcl.html">mixinStrategy.xotcl</a>, <a HREF="./package-xotcl.html">package.xotcl</a>, <a HREF="./Script-xotcl.html">Script.xotcl</a>, <a HREF="./staticMetadata-xotcl.html">staticMetadata.xotcl</a>, <a HREF="./test-xotcl.html">test.xotcl</a>, <a HREF="./trace-xotcl.html">trace.xotcl</a>, <a HREF="./upvarcompat-xotcl.html">upvarcompat.xotcl</a>, <a HREF="./xodoc-xotcl.html">xodoc.xotcl</a><li> <b>Directory '/home/neumann/xotcl-1.3.1/library/store': </b><br><a HREF="./JufGdbmStorage-xotcl.html">JufGdbmStorage.xotcl</a>, <a HREF="./MemStorage-xotcl.html">MemStorage.xotcl</a>, <a HREF="./MultiStorage-xotcl.html">MultiStorage.xotcl</a>, <a HREF="./persistenceExample-xotcl.html">persistenceExample.xotcl</a>, <a HREF="./Persistence-xotcl.html">Persistence.xotcl</a>, <a HREF="./Storage-xotcl.html">Storage.xotcl</a>, <a HREF="./TclGdbmStorage-xotcl.html">TclGdbmStorage.xotcl</a>, <a HREF="./TextFileStorage-xotcl.html">TextFileStorage.xotcl</a><li> <b>Directory '/home/neumann/xotcl-1.3.1/library/serialize': </b><br><a HREF="./Serializer-xotcl.html">Serializer.xotcl</a><li> <b>Directory '/home/neumann/xotcl-1.3.1/tests': </b><br><a HREF="./forwardtest-xotcl.html">forwardtest.xotcl</a>, <a HREF="./speedtest-xotcl.html">speedtest.xotcl</a>, <a HREF="./testo-xotcl.html">testo.xotcl</a>, <a HREF="./testx-xotcl.html">testx.xotcl</a><li> <b>Directory '/home/neumann/xotcl-1.3.1/apps/scripts': </b><br><a HREF="./adapterExample-xotcl.html">adapterExample.xotcl</a>, <a HREF="./adapter-xotcl.html">adapter.xotcl</a>, <a HREF="./compositeExample-xotcl.html">compositeExample.xotcl</a>, <a HREF="./composite-xotcl.html">composite.xotcl</a>, <a HREF="./observer-xotcl.html">observer.xotcl</a>, <a HREF="./parameter-xotcl.html">parameter.xotcl</a>, <a HREF="./pinger-xotcl.html">pinger.xotcl</a>, <a HREF="./simpleFilters-xotcl.html">simpleFilters.xotcl</a>, <a HREF="./soccerClub-xotcl.html">soccerClub.xotcl</a><li> <b>Directory '/home/neumann/xotcl-1.3.1/apps/comm': </b><br><a HREF="./ftp-xotcl.html">ftp.xotcl</a>, <a HREF="./link-checker-xotcl.html">link-checker.xotcl</a>, <a HREF="./secure-webclient-xotcl.html">secure-webclient.xotcl</a>, <a HREF="./secure-webserver-xotcl.html">secure-webserver.xotcl</a>, <a HREF="./webclient-xotcl.html">webclient.xotcl</a>, <a HREF="./webserver-xotcl.html">webserver.xotcl</a><li> <b>Directory '/home/neumann/xotcl-1.3.1/apps/actiweb/univ': </b><br><a HREF="./UNIVERSAL-xotcl.html">UNIVERSAL.xotcl</a><li> <b>Directory '/home/neumann/xotcl-1.3.1/apps/utils': </b><br><a HREF="./xo-daemon.html">xo-daemon</a>, <a HREF="./xo-whichPkg.html">xo-whichPkg</a>
+    <li> <b>Directory './library/lib': </b><br><a HREF="./changeXOTclVersion-xotcl.html">changeXOTclVersion.xotcl</a>, <a HREF="./htmllib-xotcl.html">htmllib.xotcl</a>, <a HREF="./makeDoc-xotcl.html">makeDoc.xotcl</a>, <a HREF="./make-xotcl.html">make.xotcl</a>, <a HREF="./metadataAnalyzer-xotcl.html">metadataAnalyzer.xotcl</a>, <a HREF="./mixinStrategy-xotcl.html">mixinStrategy.xotcl</a>, <a HREF="./package-xotcl.html">package.xotcl</a>, <a HREF="./Script-xotcl.html">Script.xotcl</a>, <a HREF="./staticMetadata-xotcl.html">staticMetadata.xotcl</a>, <a HREF="./test-xotcl.html">test.xotcl</a>, <a HREF="./trace-xotcl.html">trace.xotcl</a>, <a HREF="./upvarcompat-xotcl.html">upvarcompat.xotcl</a>, <a HREF="./xodoc-xotcl.html">xodoc.xotcl</a><li> <b>Directory './library/store': </b><br><a HREF="./JufGdbmStorage-xotcl.html">JufGdbmStorage.xotcl</a>, <a HREF="./MemStorage-xotcl.html">MemStorage.xotcl</a>, <a HREF="./MultiStorage-xotcl.html">MultiStorage.xotcl</a>, <a HREF="./persistenceExample-xotcl.html">persistenceExample.xotcl</a>, <a HREF="./Persistence-xotcl.html">Persistence.xotcl</a>, <a HREF="./Storage-xotcl.html">Storage.xotcl</a>, <a HREF="./TclGdbmStorage-xotcl.html">TclGdbmStorage.xotcl</a>, <a HREF="./TextFileStorage-xotcl.html">TextFileStorage.xotcl</a><li> <b>Directory './library/serialize': </b><br><a HREF="./Serializer-xotcl.html">Serializer.xotcl</a><li> <b>Directory './tests': </b><br><a HREF="./forwardtest-xotcl.html">forwardtest.xotcl</a>, <a HREF="./speedtest-xotcl.html">speedtest.xotcl</a>, <a HREF="./testo-xotcl.html">testo.xotcl</a>, <a HREF="./testx-xotcl.html">testx.xotcl</a><li> <b>Directory './apps/scripts': </b><br><a HREF="./adapterExample-xotcl.html">adapterExample.xotcl</a>, <a HREF="./adapter-xotcl.html">adapter.xotcl</a>, <a HREF="./compositeExample-xotcl.html">compositeExample.xotcl</a>, <a HREF="./composite-xotcl.html">composite.xotcl</a>, <a HREF="./observer-xotcl.html">observer.xotcl</a>, <a HREF="./parameter-xotcl.html">parameter.xotcl</a>, <a HREF="./pinger-xotcl.html">pinger.xotcl</a>, <a HREF="./simpleFilters-xotcl.html">simpleFilters.xotcl</a>, <a HREF="./soccerClub-xotcl.html">soccerClub.xotcl</a><li> <b>Directory './apps/comm': </b><br><a HREF="./ftp-xotcl.html">ftp.xotcl</a>, <a HREF="./link-checker-xotcl.html">link-checker.xotcl</a>, <a HREF="./secure-webclient-xotcl.html">secure-webclient.xotcl</a>, <a HREF="./secure-webserver-xotcl.html">secure-webserver.xotcl</a>, <a HREF="./webclient-xotcl.html">webclient.xotcl</a>, <a HREF="./webserver-xotcl.html">webserver.xotcl</a><li> <b>Directory './apps/actiweb/univ': </b><br><a HREF="./UNIVERSAL-xotcl.html">UNIVERSAL.xotcl</a><li> <b>Directory './apps/utils': </b><br><a HREF="./xo-daemon.html">xo-daemon</a>, <a HREF="./xo-whichPkg.html">xo-whichPkg</a>
   </ul>
   <p>
 
