@@ -2,13 +2,13 @@
 
 <HTML>
 <HEAD>
-  <TITLE>XOTcl - Documentation -- /home/neumann/xotcl-1.3.1/apps/utils/xo-whichPkg</TITLE>
+  <TITLE>XOTcl - Documentation -- ./apps/utils/xo-whichPkg</TITLE>
 </HEAD>
 
 <BODY BGCOLOR="FFFFFF">
   <h1>
-    <IMG SRC="./logo-100.jpg" ALT="/home/neumann/xotcl-1.3.1/apps/utils/xo-whichPkg" ALIGN="MIDDLE">
-  /home/neumann/xotcl-1.3.1/apps/utils/xo-whichPkg</h1>
+    <IMG SRC="./logo-100.jpg" ALT="./apps/utils/xo-whichPkg" ALIGN="MIDDLE">
+  ./apps/utils/xo-whichPkg</h1>
   <HR>
   <P>
     <h2> Package/File Information </h2>
@@ -18,8 +18,8 @@
     <BR>
     <BR>
     <b> Filename: </b>
-    <A HREF="/home/neumann/xotcl-1.3.1/apps/utils/xo-whichPkg">
-      /home/neumann/xotcl-1.3.1/apps/utils/xo-whichPkg
+    <A HREF="./apps/utils/xo-whichPkg">
+      ./apps/utils/xo-whichPkg
     </A>
     <BR>
     <BR>
@@ -51,7 +51,7 @@
           <em> Date:</em>
         </TD>
         <TD VALIGN="top">
-          [::xotcl::rcs date {$Date: 2004/08/19 09:57:50 $}]
+          [::xotcl::rcs date {$Date: 2004/08/22 10:00:19 $}]
         </TD>
       </TR>
     </TABLE>
